# agent-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  OptimizationToDo.md  README.md  RELEASING.md  REQUIREMENTS.md  ToDo.md  agent-cli.py  doom  doom.c  fibonacci.py  hello  plan.md  pyproject.toml  refactoring_checklist.md
.agent-cli/skills/: optimize.md  review-code.md  summarize.md  test.md
.github/workflows/: ci.yml
_workspace/: audit_feedback_v1.md  audit_feedback_v2.md  audit_feedback_v3.md  audit_feedback_v4.md  audit_feedback_v5.md  audit_report_v1.md  audit_report_v2.md  audit_report_v3.md  audit_report_v4.md  audit_report_v5.md  review_report.md
agent_cli/: __init__.py  __main__.py  config.py  constants.py  default_models.json  hooks.py  input_history.py  loop.py  main.py  render.py  resource_loader.py  review.py  setup.py  verbose.py
agent_cli/agents/builtin/: explorer.md  reviewer.md
agent_cli/code_index/: __init__.py  _sqlite.py  _unifdef.py  builder.py  callgraph.py  preproc.py  schema.py  slice.py  store.py
agent_cli/code_index/languages/: __init__.py  _shared.py  c.py  cpp.py  go.py  java.py  javascript.py  markdown.py  python.py  rust.py  typescript.py
agent_cli/context/: __init__.py  _file_extract.py  manager.py  overflow.py  scratchpad.py  session.py  token_estimator.py
agent_cli/hooks/: __init__.py  context.py  events.py  loader.py  runner.py  shell.py
agent_cli/integrations/: __init__.py  export.py  jira.py
agent_cli/mcp/: __init__.py  adapter.py  client.py  config.py
agent_cli/parsing/: __init__.py  json_repair.py  plan_parser.py  react_parser.py
agent_cli/planning/: __init__.py  executor.py  generator.py  models.py  reviewer.py
agent_cli/prompts/: compression_prompt.py  system_prompt.py
agent_cli/providers/: __init__.py  anthropic.py  base.py  capabilities.py  compat.py  http.py  ollama.py  openai.py  openai_compat.py
agent_cli/recovery/: __init__.py  builders.py  common_recovery.py  detectors.py  intervention.py  observability.py  primitives.py  recursion.py  wf_recovery.py
agent_cli/render/: __init__.py  adaptive.py  base.py  fancy.py  minimal.py  web.py
agent_cli/skills/: __init__.py  executor.py  loader.py  models.py
agent_cli/skills/builtin/: create-agent.md  create-skill.md  plan.md
agent_cli/skills/builtin/create-skill/: SKILL.md
agent_cli/tools/: __init__.py  _diff.py  action_summary.py  base.py  code_index.py  context.py  delegate.py  edit_file.py  fetch.py  read_artifact.py  read_file.py  registry.py  result.py  run_skill.py  shell.py  shell_artifact.py  symbols.py  truncation.py  virtual.py  write_file.py
agent_cli/web/: __init__.py  idle.py  instance_file.py  server.py
agent_cli/web/static/: app.js  index.html  style.css
agent_cli/wire_formats/: __init__.py  _format_rules_builder.py  _json_diag.py  _json_repair.py  base.py  envelope.py  md_array.py  prefix_md.py  react.py
bench/swebench/: README.md  report.py  run_inference.py  run_inference_container.py
docs/: ARCHITECTURE.md  audit-consistency.md  benchmark-openharness.md
docs/analysis/: WORKSPACE_ANALYSIS.md  diff-pipeline.md  web-render-wire-skills-mcp.md
docs/code-index/: DESIGN.md
docs/context-compaction/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md
docs/context-redesign/: DESIGN.md  IMPLEMENTATION_PLAN.md  REMAINING_DEBT.md
docs/delegate-agent/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md
docs/delegate-output/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md
docs/delegate-redesign/: PARALLEL_REQUIREMENTS.md
docs/dual-gate-compaction/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md
docs/git-snapshot/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md
docs/history-schema/: DESIGN.md
docs/hook-redesign/: DESIGN.md
docs/inputs-array-schema/: DESIGN.md
docs/intake-unification/: DESIGN.md
docs/jira-http-and-nickname-edit/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md
docs/mcp-integration/: DESIGN.md
docs/ref-block-wire-format/: DESIGN.md
docs/robust-harness/: DESIGN.md  REMAINING_DEBT.md
docs/web-fixes-3/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md
plan/: schema-flatten.md
scripts/: live_test_code_index.py
scripts/bakeoff/: phase1.py  phase2.py  proto_inputs_array.py  proto_md_array.py
scripts/bakeoff/results/: phase1_20260510_205902.json  phase1_20260510_205902.md  phase1_20260510_223214.json  phase1_20260510_223214.md  phase1_20260517_201627.json  phase1_20260517_201627.md  phase1_latest.json  phase1_latest.md  phase2_20260517_215223.json  phase2_20260517_215223.md  phase2_20260518_215705.json  phase2_20260518_215705.md  phase2_latest.json  phase2_latest.md
tests/: conftest.py  test_action_input_context_view.py  test_action_loop_detector.py  test_action_summary.py  test_adaptive_renderer.py  test_app_markdown.py  test_builtin_agents.py  test_builtin_skills.py  test_capabilities.py  test_compat.py  test_config.py  test_context_compaction.py  test_context_manager.py  test_context_manager_v2.py  test_delegate_agent.py  test_delegate_output.py  test_delegate_unified_lifecycle.py  test_dispatch_agent_or_skill.py  test_dropped_field_recovery.py  test_edit_batch.py  test_export.py  test_fetch.py  test_fuzzy_edit.py  test_hooks.py  test_hooks_python.py  test_import_cycles.py  test_input_history.py  test_integration.py  test_integration_builtin.py  test_integration_omlx.py  test_integration_omlx_builtin.py  test_intervention.py  test_json_bracket_close.py  test_json_diag.py  test_json_quote_repair.py  test_json_repair.py  test_loop.py  test_mcp.py  test_multi_op.py  test_multiline_input.py  (+52 more)
tests/code_index/: helpers.py  test_atomic_write.py  test_builder.py  test_c.py  test_callgraph.py  test_cpp.py  test_go.py  test_java.py  test_js_ts.py  test_markdown.py  test_path_normalize.py  test_post_hook.py  test_preproc.py  test_property_invariants.py  test_property_walkers.py  test_python.py  test_rust.py  test_slice.py  test_sqlite_fallback.py  test_store.py  test_tool_batch.py  test_tool_dispatch.py  test_tool_flat.py  test_tool_hashline.py  test_tool_on_demand.py  test_unifdef.py
tests/snapshots/: tools_section_react.txt
(+34 files in other folders)
