[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli"
version = "2.0.0-dev"
description = "ReAct pattern agentic loop CLI for on-premise LLMs"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-markdown>=0.3",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    # ``pysqlite3-binary`` ships a precompiled SQLite C library inside
    # the wheel. The ``agent_cli.code_index._sqlite`` shim prefers
    # stdlib ``sqlite3`` (zero cost when Python was built with SQLite
    # support) and only reaches for this wheel if the stdlib module
    # is missing — i.e., on locked-down servers whose Python was
    # compiled ``--without-sqlite``. The project only publishes
    # Linux manylinux wheels (no macOS / Windows binaries), and that
    # matches the deployment target where the SQLite gap actually
    # happens (locked-down server VMs); macOS / Windows hosts ship
    # stdlib sqlite3 in their normal Python distributions, so the
    # marker keeps the wheel out of dev installs that don't need it.
    "pysqlite3-binary>=0.5; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.27", "hypothesis>=6.0"]
# macOS: install gnureadline for proper CJK width in chat input
macos = ["gnureadline>=8.0; sys_platform == 'darwin'"]
# Optional `agent-cli web` LAN UI — install with `pip install agent-cli[web]`
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
]

[project.scripts]
agent-cli = "agent_cli.main:app"

[tool.setuptools.packages.find]
include = ["agent_cli*"]

[tool.setuptools.package-data]
agent_cli = ["default_models.json", "web/static/*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Tree-sitter fixture files are intentionally non-conforming source
# (broken syntax in error.*, unused imports in canonical samples) — exclude
# them from both lint and format passes.
extend-exclude = ["tests/code_index/fixtures"]
