[build-system]
# >=62.3 for recursive ``**`` globs in [tool.setuptools.package-data]
# (the bundled built-in agents/skills live in nested .md dirs).
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli"
dynamic = ["version"]
description = "ReAct pattern agentic loop CLI for on-premise LLMs"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-markdown>=0.3",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    # ``pysqlite3-binary`` ships a precompiled SQLite C library inside
    # the wheel. The ``agent_cli.code_index._sqlite`` shim prefers
    # stdlib ``sqlite3`` (zero cost when Python was built with SQLite
    # support) and only reaches for this wheel if the stdlib module
    # is missing — i.e., on locked-down servers whose Python was
    # compiled ``--without-sqlite``. **It only publishes x86_64
    # manylinux wheels** — there is NO arm64 (aarch64) wheel and no
    # sdist, so an unqualified ``sys_platform == 'linux'`` marker makes
    # the whole package uninstallable on arm64 Linux (pip: "No matching
    # distribution"). Restrict the marker to x86_64 Linux, the only
    # place the wheel exists; arm64 Linux (and macOS / Windows) rely on
    # their stdlib ``sqlite3`` (conda / system Python ship it), which the
    # shim already prefers.
    "pysqlite3-binary>=0.5; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.27", "hypothesis>=6.0"]
# macOS: install gnureadline for proper CJK width in chat input
macos = ["gnureadline>=8.0; sys_platform == 'darwin'"]
# Optional `agent-cli web` LAN UI — install with `pip install agent-cli[web]`
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
]

[project.scripts]
agent-cli = "agent_cli.main:app"

[tool.setuptools.dynamic]
version = { attr = "agent_cli.__version__" }

[tool.setuptools.packages.find]
include = ["agent_cli*"]

[tool.setuptools.package-data]
agent_cli = [
    "default_models.json",
    "web/static/*",
    # Bundled built-in agents/skills are .md (+ nested reference dirs), not .py,
    # so they need explicit inclusion or pip installs ship without them — the
    # auto-review reviewer, explorer, and create-* skills would all go missing.
    "agents/builtin/**/*.md",
    "skills/builtin/**/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "omlx_integration: requires a live OpenAI-compatible omlx server (see tests/conftest.py)",
]

[tool.ruff]
# Tree-sitter fixture files are intentionally non-conforming source
# (broken syntax in error.*, unused imports in canonical samples) — exclude
# them from both lint and format passes.
extend-exclude = ["tests/code_index/fixtures"]
